--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
 
 .a {
     width: 95%;
+
 }
 
 .b {
@@ -80,20 +81,22 @@ body {
 .home {
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* margin-top: right; */
+    
 }
 
 .home h1 {
     font-size: 50px;
     border-bottom: 1px solid rgb(98, 93, 93);
     text-transform: uppercase;
+    margin-top:0
 }
 
 .home h3 {
     font-size: 28px;
     padding: 5px 0;
     opacity: 0.6;
-    margin: 20px;
+    margin: 0;
+    margin-top:-30px;
 }
 
 footer {
@@ -104,7 +107,7 @@ footer {
 .box {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translate(-50%, -50%);
     width: 600px;
     padding: 20px;
@@ -145,7 +148,7 @@ footer {
 }
 
 .box .content p {
-    margin: auto;
+    margin: -5px;
     padding: 0 0 0;
     text-align: left;
     margin-left: 120px;
@@ -192,11 +195,13 @@ footer {
 }
 
 .container2 {
-    margin-right: -70%;
+    margin-right: 10%;
+
 }
 
 .container2 h5 {
     background-color: burlywood;
+    font-size:20px;
 }
 
 
@@ -253,6 +258,6 @@ footer {
         max-width: 20px;
     }
     .box .content p {
-        width: 100px;
+        width: 50px;
     }
 }
